--- a/src/assets/style/app.css
+++ b/src/assets/style/app.css
@@ -5,3 +5,15 @@
 input{
     @apply focus:tw-outline-none tw-outline-none;
 }
+
+@layer utilities{
+    .toggle-checkbox:checked {
+        @apply right-0 border-red-600;
+        right: 0;
+        /* border-color: #68D391; */
+      }
+      .toggle-checkbox:checked + .toggle-label {
+        @apply bg-red-600;
+        /* background-color: #68D391; */
+      }
+}
