--- a/src/assets/style/app.css
+++ b/src/assets/style/app.css
@@ -6,5 +6,9 @@
     @apply tw-bg-red-600 hover:tw-bg-red-700 tw-text-white tw-rounded-md;
 }
 .btn-secondary{
-  @apply tw-border tw-border-red-200 tw-text-red-600 tw-bg-white tw-rounded-md
+  @apply tw-border tw-border-red-200 tw-text-red-600 tw-bg-white tw-rounded-md;
+}
+
+*{
+  font-family: Montserrat , system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
